--- a/composer.json
+++ b/composer.json
@@ -35,17 +35,16 @@
         "php": ">=5.3.3",
         "ext-xml": "*",
         "zendframework/zend-escaper": "2.4.*",
-        "zendframework/zend-stdlib": "2.4.*",
-        "zendframework/zend-validator": "2.4.*",
+        "zendframework/zend-stdlib": "3.1.*",
+        "zendframework/zend-validator": "2.9.*",
         "phpoffice/common": "0.2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
-        "phpdocumentor/phpdocumentor":"2.*",
         "squizlabs/php_codesniffer": "1.*",
         "phpmd/phpmd": "2.*",
         "phploc/phploc": "2.*",
-        "dompdf/dompdf":"0.6.*",
+        "dompdf/dompdf": "0.7.x@beta",
         "tecnickcom/tcpdf": "6.*",
         "mpdf/mpdf": "5.*"
     },
