--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "phpoffice/phpword",
+    "name": "adoramedia/phpword",
     "description": "PHPWord - A pure PHP library for reading and writing word processing documents (OOXML, ODF, RTF, HTML, PDF)",
     "keywords": [
         "PHP", "PHPOffice", "office", "PHPWord", "word", "template", "template processor", "reader", "writer",
@@ -35,13 +35,12 @@
         "php": ">=5.3.3",
         "ext-xml": "*",
         "zendframework/zend-escaper": "2.4.*",
-        "zendframework/zend-stdlib": "2.4.*",
+        "zendframework/zend-stdlib": "3.1.*",
         "zendframework/zend-validator": "2.4.*",
         "phpoffice/common": "0.2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
-        "phpdocumentor/phpdocumentor":"2.*",
         "squizlabs/php_codesniffer": "1.*",
         "phpmd/phpmd": "2.*",
         "phploc/phploc": "2.*",
