--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "ext-xml": "*",
         "zendframework/zend-escaper": "2.4.*",
         "zendframework/zend-stdlib": "3.1.*",
-        "zendframework/zend-validator": "2.4.*",
+        "zendframework/zend-validator": "2.9.*",
         "phpoffice/common": "0.2.*"
     },
     "require-dev": {
@@ -44,7 +44,7 @@
         "squizlabs/php_codesniffer": "1.*",
         "phpmd/phpmd": "2.*",
         "phploc/phploc": "2.*",
-        "dompdf/dompdf":"0.6.*",
+        "dompdf/dompdf": "0.7.x@beta",
         "tecnickcom/tcpdf": "6.*",
         "mpdf/mpdf": "5.*"
     },
