--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "ext-xml": "*",
         "zendframework/zend-escaper": "2.4.*",
         "zendframework/zend-stdlib": "3.1.*",
-        "zendframework/zend-validator": "2.9.*",
+        "zendframework/zend-validator": ">=2.7.*",
         "phpoffice/common": "0.2.*"
     },
     "require-dev": {
