--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     "require": {
         "php": ">=5.3.3",
         "ext-xml": "*",
-        "zendframework/zend-escaper": "2.4.*",
+        "zendframework/zend-escaper": ">=2.4.0",
         "zendframework/zend-stdlib": "3.1.*",
         "zendframework/zend-validator": ">=2.7.0",
         "phpoffice/common": "0.2.*"
